fix(Bookmarks): quick links mode not centered

--- a/src/plugins/widgets/bookmarks/Bookmarks.sass
+++ b/src/plugins/widgets/bookmarks/Bookmarks.sass
@@ -1,6 +1,7 @@
 .Bookmarks
-  text-align: left
-  padding-right: 10px
+  &:not(.quick-links)
+    text-align: left
+    padding-right: 10px
 
   .folder, .bookmark
     i, img
